--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        >
+        <activity android:name=".MainActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailsActivity" />
+        <activity android:name=".DetailsActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".SettingsActivity"
             android:label="@string/settings"
             android:parentActivityName=".MainActivity">
@@ -26,6 +29,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <provider
+            android:name="com.a5airi.popularmovies.moviesDB.MoviesContentProvider"
+            android:authorities="com.a5airi.popularmovies"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
